--- a/n2n_ntop/Dockerfile
+++ b/n2n_ntop/Dockerfile
@@ -29,23 +29,18 @@ RUN apk add --update --no-cache openssl dhclient dhcp-server-ldap bash
 COPY --from=builder /usr/local/bin/n2n-benchmark /usr/local/sbin/
 COPY --from=builder /usr/local/sbin/supernode /usr/local/sbin/
 COPY --from=builder /usr/local/sbin/edge /usr/local/sbin/
-# COPY edge-dhcp-server/dhcpd.conf  /etc/dhcp/dhcpd.conf
-COPY run.sh /usr/local/sbin/
 COPY n2n.sh /usr/local/sbin/
+COPY run.sh /usr/local/sbin/
 
 RUN set -x \
-  && chmod a+x /usr/local/sbin/run.sh \
-  && chmod a+x /usr/local/sbin/n2n.sh \
-  && touch /var/lib/dhcp/dhcpd.leases \
-  && touch /var/log/n2n.log \
-  && touch /var/log/run.log
+  && chmod a+x /usr/local/sbin/*.sh
 
 ENV MODE DHCP
 ENV N2N_PORT 10086
 ENV N2N_TUN edge0
-ENV N2N_IP 10.0.10.10
-ENV N2N_COMMUNITY zctmdc_proxy
-ENV N2N_KEY zctmdc_proxy
+ENV N2N_IP 10.10.10.10
+ENV N2N_COMMUNITY n2n
+ENV N2N_KEY test
 ENV N2N_SERVER n2n.lucktu.com:10086
 ENV N2N_ARGS -Av
 CMD [ "/bin/bash" , "-c" , "/usr/local/sbin/run.sh" ]
