--- a/n2n_proxy/docker-compose.yaml
+++ b/n2n_proxy/docker-compose.yaml
@@ -9,14 +9,14 @@ services:
     privileged: true
     environment:
       - MODE=DHCPD
-      - N2N_IP=10.0.10.1
-      - N2N_COMMUNITY=zctmdc_proxy
-      - N2N_KEY=zctmdc_proxy
+      - N2N_IP=10.10.10.1
+      - N2N_COMMUNITY=n2n
+      - N2N_KEY=test
       - N2N_SERVER=n2n.lucktu.com:10086
       - N2N_ARGS=-Avr
       - N2N_NAT=TRUE
       - N2N_PROXY=TRUE
-      - PROXY_ARGS=-L=:1080
+      - PROXY_ARGS=-L=:14080
     # volumes:
     #   - ./dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
     command: ["/bin/bash", "-c", "/usr/local/sbin/run.sh"]
@@ -32,17 +32,17 @@ services:
     privileged: true
     environment:
       - MODE=DHCP
-      - N2N_COMMUNITY=zctmdc_proxy
-      - N2N_KEY=zctmdc_proxy
+      - N2N_COMMUNITY=n2n
+      - N2N_KEY=test
       - N2N_SERVER=n2n.lucktu.com:10086
       - N2N_ROUTE=TURE
       - N2N_DESTINATION=192.168.0.0/16
-      - N2N_GATEWAY=10.0.10.1
+      - N2N_GATEWAY=10.10.10.1
       - N2N_ARGS=-Avr
       - N2N_PROXY=TRUE
-      - PROXY_ARGS=-L=:1080
+      - PROXY_ARGS=-L=:14080
     ports:
-      - 1080:1080
+      - 14080:14080
     command: ["/bin/bash", "-c", "/usr/local/sbin/run.sh"]
 
   n2n_proxy_static:
@@ -54,9 +54,9 @@ services:
     privileged: true
     environment:
       - MODE=STATIC
-      - N2N_IP=10.0.10.100
-      - N2N_COMMUNITY=zctmdc_proxy
-      - N2N_KEY=zctmdc_proxy
+      - N2N_IP=10.10.10.100
+      - N2N_COMMUNITY=n2n
+      - N2N_KEY=test
       - N2N_SERVER=n2n.lucktu.com:10086
       - N2N_ROUTE=FALSE
       # - N2N_DESTINATION=192.168.0.0/16
