--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,14 +18,14 @@ services:
       dockerfile: Dockerfile
     image: zctmdc/file-server:Alpha
 
+  route_apps_server:
+    build:
+      context: route_apps_server
+      dockerfile: Dockerfile
+    image: zctmdc/route_apps_server:Alpha
+
   easy_explore:
     build:
       context: easy-explorer
       dockerfile: Dockerfile
     image: zctmdc/easy-explorer:Alpha
-
-  easy-explorer-smb:
-    build:
-      context: easy-explorer-smb
-      dockerfile: Dockerfile
-    image: zctmdc/easy-explorer-smb:Alpha
