--- a/nginx_file_server/Dockerfile
+++ b/nginx_file_server/Dockerfile
@@ -1,20 +1,25 @@
-FROM nginx
+FROM nginx:alpine
 MAINTAINER zctmdc <zctmdc@outlook.com>
+
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
+
+RUN set -x \
+  && apk add --update --no-cache bash sed
 
 RUN set -x \
   && cat /etc/nginx/conf.d/default.conf \
-  && sed -i '0,/localhost/s//_/'  /etc/nginx/conf.d/default.conf \
+  && sed -i "0,/localhost/s//_/" /etc/nginx/conf.d/default.conf \
   && mkdir -p /var/www/static \
   && sed -i '0,/index.*/s//autoindex on;/'  /etc/nginx/conf.d/default.conf \
   && mv /etc/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf.example \
-  && chmod a-wx /etc/nginx/conf.d/default.conf.example
+  && chmod 0444 /etc/nginx/conf.d/default.conf.example
 
-COPY run.sh /usr/local/sbin/run.sh
+COPY file_server.sh /usr/local/sbin/
+COPY run.sh /usr/local/sbin/
 
-RUN chmod a+x /usr/local/sbin/run.sh
+RUN chmod a+x /usr/local/sbin/*.sh
 
-ENV WORK_PATH="/workpath"
-ENV STATIC_PATH="/var/www/static/"
+ENV WORK_PATH /workpath
 
 EXPOSE 80
 
