增加自动重启
增加自动重启

--- a/nginx_file_server/docker-compose.yaml
+++ b/nginx_file_server/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile
     image: zctmdc/file-server:Alpha
+    # restart: always
     volumes:
       # - C:\Users\ZCTMDC\OneDrive\cloud\apps\route:/workpath:ro
       - C:\Users\ZCTMDC\Downloads\share:/workpath:ro
