--- a/route_apps_server/docker-compose.yaml
+++ b/route_apps_server/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile
     image: zctmdc/route_apps_server:Alpha
+    restart: always
     environment:
       - N2N_TMP_DIR=/tmp
       - N2N_OPT_DIR=/tmp/bin
