--- a/nginx_file_server/docker-compose.yaml
+++ b/nginx_file_server/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     # restart: always
     volumes:
       # - C:\Users\ZCTMDC\OneDrive\cloud\apps\route:/workpath:ro
-      - C:\Users\ZCTMDC\Downloads\share:/workpath:ro
+      # - C:\Users\ZCTMDC\Downloads\share:/workpath:ro
     ports:
       - 16680:80
     command: ["/bin/bash", "-c", "/usr/local/sbin/run.sh"]
