--- a/route_apps_server/docker-compose.yaml
+++ b/route_apps_server/docker-compose.yaml
@@ -9,12 +9,15 @@ services:
     image: zctmdc/route_apps_server:Alpha
     restart: always
     environment:
-      - N2N_TMP_DIR=/tmp
+      - N2N_TMP_DIR=/tmp/n2n
       - N2N_OPT_DIR=/tmp/bin
       - WORK_PATH=/tmp
       - FORCE_UPDATE=FALSE
       - FRP_TMP_DIR=/tmp/frp
       - FRP_OPT_DIR=/tmp/bin
+      - QINIUYUN_AK=n_wXv2dFzW0VRiu_gnrorwMtU06vlOXIaXppvEed
+      - QINIUYUN_SK=APYlQp34J-9_wURM6DQdNiKZ5vom2h0erb2XVs1Z
+      - QINIUYUN_NAME=ZCTMDC
     volumes:
       - route_apps-data:/tmp:rw
     ports:
