--- a/nginx_file_server/Dockerfile
+++ b/nginx_file_server/Dockerfile
@@ -7,8 +7,8 @@ RUN set -x \
   && apk add --update --no-cache bash sed
 
 RUN set -x \
-  && cat /etc/nginx/conf.d/default.conf \
-  && sed -i "0,/localhost/s//_/" /etc/nginx/conf.d/default.conf \
+  && sed -i '/charset/a\    charset utf-8;' /etc/nginx/conf.d/default.conf \
+  && sed -i '0,/localhost/s//_/' /etc/nginx/conf.d/default.conf \
   && mkdir -p /var/www/static \
   && sed -i '0,/index.*/s//autoindex on;/'  /etc/nginx/conf.d/default.conf \
   && mv /etc/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf.example \
@@ -20,6 +20,7 @@ COPY run.sh /usr/local/sbin/
 RUN chmod a+x /usr/local/sbin/*.sh
 
 ENV WORK_PATH /workpath
+ENV TZ Asia/Shanghai
 
 EXPOSE 80
 
