--- a/n2n_proxy/Dockerfile
+++ b/n2n_proxy/Dockerfile
@@ -11,7 +11,7 @@ RUN set -x \
   && chmod a+x /usr/local/sbin/*.sh
 
 ENV N2N_DESTINATION 192.168.0.0/16
-ENV N2N_GATEWAY 10.10.10.1
+ENV N2N_GATEWAY ""
 ENV N2N_ROUTE FALSE
 ENV N2N_NAT FALSE
 ENV N2N_PROXY TRUE
