--- a/nginx_file_server/docker-compose.yaml
+++ b/nginx_file_server/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     image: zctmdc/file-server:Alpha
     # restart: always
-    volumes:
+    # volumes:
       # - C:\Users\ZCTMDC\OneDrive\cloud\apps\route:/workpath:ro
       # - C:\Users\ZCTMDC\Downloads\share:/workpath:ro
     ports:
