--- a/route_apps_server/docker-compose.yaml
+++ b/route_apps_server/docker-compose.yaml
@@ -23,4 +23,4 @@ services:
       - route_apps-data:/tmp:rw
     ports:
       - 17880:80
-    command: ["/bin/bash", "-c", "/usr/local/sbin/run.sh"]
+    command: ["/bin/bash", "-c", "/usr/local/bin/run.sh"]
