--- a/route_apps_server/Dockerfile
+++ b/route_apps_server/Dockerfile
@@ -18,10 +18,10 @@ EXPOSE 80
 ENV FRP_TMP_DIR /tmp/frp
 ENV FRP_OPT_DIR /tmp/bin
 ENV WORK_PATH /tmp/
-
-ENV N2N_TMP_DIR /tmp
+ENV N2N_TMP_DIR /tmp/n2n
 ENV N2N_OPT_DIR /tmp/bin
 ENV WORK_PATH /tmp
+ENV TZ Asia/Shanghai
 
 ENV FORCE_UPDATE FALSE
 
