--- a/easy-explorer/docker-compose.yaml
+++ b/easy-explorer/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile
     privileged: true
+    hostname: example.com # set to fqdn of host
     image: zctmdc/easy-explorer:Alpha
     environment:
       # - USER_TOKEN=
