--- a/n2n_ntop/Dockerfile
+++ b/n2n_ntop/Dockerfile
@@ -1,27 +1,27 @@
-FROM alpine AS builder
+# FROM alpine AS builder
 
-LABEL zctmdc <zctmdc@outlook.com>
+# LABEL zctmdc <zctmdc@outlook.com>
 
-RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
-# RUN sed -i 's/snapshot.debian.org/mirrors.aliyun.com/g' /etc/apt/sources.list
-# RUN sed -i 's/archive.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list
+# RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
+# # RUN sed -i 's/snapshot.debian.org/mirrors.aliyun.com/g' /etc/apt/sources.list
+# # RUN sed -i 's/archive.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list
 
-WORKDIR /tmp
-RUN buildDeps=" \
-    build-base \
-    cmake \
-    git \
-    linux-headers \
-    openssl-dev \
-    libpcap-dev \
-  "; \
-  \
-  set -x \
-  && apk add --update --no-cache --virtual .build-deps $buildDeps \
-  && git clone https://github.com/ntop/n2n.git \
-  && cd n2n \
-  && cmake . \
-  && make install
+# WORKDIR /tmp
+# RUN buildDeps=" \
+#     build-base \
+#     cmake \
+#     git \
+#     linux-headers \
+#     openssl-dev \
+#     libpcap-dev \
+#   "; \
+#   \
+#   set -x \
+#   && apk add --update --no-cache --virtual .build-deps $buildDeps \
+#   && git clone https://github.com/ntop/n2n.git \
+#   && cd n2n \
+#   && cmake . \
+#   && make install
 
 FROM alpine
 
@@ -29,14 +29,20 @@ RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
 
 RUN apk add --update --no-cache openssl dhclient dhcp-server-ldap bash
 
-COPY --from=builder /usr/local/bin/n2n-benchmark /usr/local/sbin/
-COPY --from=builder /usr/local/sbin/supernode /usr/local/sbin/
-COPY --from=builder /usr/local/sbin/edge /usr/local/sbin/
+# COPY --from=builder /usr/local/bin/n2n-benchmark /usr/local/sbin/
+# COPY --from=builder /usr/local/sbin/supernode /usr/local/sbin/
+# COPY --from=builder /usr/local/sbin/edge /usr/local/sbin/
+
+RUN mkdir -p /usr/local/sbin/
+RUN wget -O /usr/local/sbin/edge http://rt.qiniu.zctmdc.cn/bin/edge_v2_linux_x86 
+RUN wget -O /usr/local/sbin/supernode http://rt.qiniu.zctmdc.cn/bin/supernode_v2_linux_x86
+
 COPY *.sh /usr/local/sbin/
 
 
 RUN set -x \
-  && chmod a+x /usr/local/sbin/*.sh
+  # && chmod a+x /usr/local/sbin/*.sh \
+  && chmod a+x /usr/local/sbin/*
 
 ENV MODE DHCP
 ENV N2N_PORT 10086
