update and fix bugs

--- a/n2n_ntop/Dockerfile
+++ b/n2n_ntop/Dockerfile
@@ -45,12 +45,21 @@ RUN set -x \
   && chmod a+x /usr/local/sbin/*
 
 ENV MODE DHCP
-ENV N2N_PORT 10086
-ENV N2N_TUN edge0
-ENV N2N_IP 10.10.10.10
-ENV N2N_COMMUNITY n2n
-ENV N2N_KEY test
-ENV N2N_SERVER n2n.lucktu.com:10086
-ENV N2N_ARGS -A -v
-ENV TZ Asia/Shanghai
+
+ENV N2N_ARGS "-v -f"
+
+ENV SUPERNODE_HOST n2n.lucktu.com
+ENV SUPERNODE_PORT 10086
+
+ENV EDGE_IP 10.10.10.10
+ENV EDGE_NETMASK 255.255.255.0
+ENV EDGE_COMMUNITY n2n
+ENV EDGE_KEY test
+ENV EDGE_TUN edge0
+ENV EDGE_ENCRYPTION A3
+ENV EDGE_REG_INTERVAL 5
+ENV EDGE_MTU 1290
+ENV EDGE_UDP_PORT ""
+
 CMD [ "/bin/bash" , "-c" , "/usr/local/sbin/run.sh" ]
+HEALTHCHECK --interval=5s --timeout=2s CMD /usr/local/sbin/n2n_healthcheck.sh
