--- a/n2n_proxy/Dockerfile
+++ b/n2n_proxy/Dockerfile
@@ -10,11 +10,11 @@ RUN set -x \
   && apk add --update --no-cache psmisc \
   && chmod a+x /usr/local/sbin/*.sh
 
-ENV N2N_DESTINATION 192.168.0.0/16
-ENV N2N_GATEWAY ""
-ENV N2N_ROUTE FALSE
-ENV N2N_NAT FALSE
-ENV N2N_PROXY TRUE
+ENV EDGE_DESTINATION 192.168.0.0/16
+ENV EDGE_GATEWAY ""
+ENV EDGE_ROUTE FALSE
+ENV EDGE_NAT FALSE
+ENV EDGE_PROXY TRUE
 ENV PROXY_ARGS -L=:14080
 ENV TZ Asia/Shanghai
 
