--- a/n2n_proxy/docker-compose.yaml
+++ b/n2n_proxy/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: zctmdc/n2n_proxy:Alpha
+    image: zctmdc/n2n_proxy:Beta
     restart: always
     privileged: true
     environment:
@@ -27,7 +27,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - n2n_proxy_nat
-    image: zctmdc/n2n_proxy:Alpha
+    image: zctmdc/n2n_proxy:Beta
     restart: always
     privileged: true
     environment:
@@ -49,7 +49,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: zctmdc/n2n_proxy:Alpha
+    image: zctmdc/n2n_proxy:Beta
     restart: always
     privileged: true
     environment:
