--- a/easy-explorer/docker-compose.yaml
+++ b/easy-explorer/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       dockerfile: Dockerfile
     privileged: true
     hostname: example.com # set to fqdn of host
-    image: zctmdc/easy-explorer:Alpha
+    image: zctmdc/easy-explorer:Beta
     environment:
       # - USER_TOKEN=
     volumes:
