--- a/nginx_file_server/docker-compose.yaml
+++ b/nginx_file_server/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: zctmdc/file-server:Alpha
+    image: zctmdc/file-server:Beta
     # restart: always
     # volumes:
       # - C:\Users\ZCTMDC\OneDrive\cloud\apps\route:/workpath:ro
