--- a/route_apps_server/docker-compose.yaml
+++ b/route_apps_server/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: zctmdc/route_apps_server:Alpha
+    image: zctmdc/route_apps_server:Beta
     restart: always
     environment:
       - N2N_TMP_DIR=/tmp/n2n
