--- a/nginx_file_server/Dockerfile
+++ b/nginx_file_server/Dockerfile
@@ -3,6 +3,11 @@ LABEL zctmdc <zctmdc@outlook.com>
 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
 
+RUN apk add --update --no-cache tzdata \
+  && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
+  && echo "Asia/Shanghai" > /etc/timezone \
+  && apk del tzdata
+
 RUN set -x \
   && apk add --update --no-cache bash sed
 
