--- a/frp/Dockerfile
+++ b/frp/Dockerfile
@@ -1,5 +1,11 @@
 FROM golang:alpine as buildDeps
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
+
+RUN apk add --update --no-cache tzdata \
+  && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
+  && echo "Asia/Shanghai" > /etc/timezone \
+  && apk del tzdata
+
 RUN set -x \
   && apk add --update --no-cache git make
 
